[package]
name = "rustic-logger"
version = "0.1.0"
edition = "2021"
description = "RusticLogger: because life is too short to debug without logs!"
license = "MIT"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
nickel = "0.11.0"
